# edusmart-backend

./: .env.example  .gitignore  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 20260319_01_create_users_and_refresh_tokens.py  20260320_01_create_documents.py  20260320_02_add_document_extraction_and_chunks.py  20260321_01_add_document_chunk_embedding_vector.py  20260322_01_create_summaries.py  20260322_02_rename_summaries_content_markdown.py  20260322_03_add_summary_status_fields.py  20260322_04_create_quizzes.py  20260322_05_create_quiz_attempts.py  20260322_06_create_flashcards.py  20260323_01_create_learning_goals_and_reminders.py  20260402_01_make_flashcard_set_document_optional.py
docs/: auth-api.md  auth-flow.md  database.md  db.md  flashcards-api.md  getting-started-commands.md  git-github-guide.md  goals-api.md  install_poetry.md  plan-project.md  quizzes-api.md  summaries_strategy.md  summary_project.md  vps-docker-operations.md
src/: main.py
src/core/: config.py  dependencies.py  security.py
src/infrastructure/auth/: google_oauth_client.py
src/infrastructure/database/: session.py
src/infrastructure/storage/: minio_client.py
src/models/: __init__.py  document.py  document_chunk.py  flashcard.py  flashcard_set.py  goal_progress_log.py  learning_goal.py  quiz.py  quiz_attempt.py  refresh_token.py  reminder_event.py  reminder_preference.py  summary.py  user.py
src/modules/auth/: repository.py  router.py  schemas.py  service.py
src/modules/documents/: extraction_service.py  repository.py  router.py  schemas.py  service.py  vectorization_service.py
src/modules/flashcards/: repository.py  router.py  schemas.py  service.py
src/modules/learning_goals/: reminder_scheduler.py  repository.py  router.py  schemas.py  service.py
src/modules/quizzes/: repository.py  router.py  schemas.py  service.py
src/modules/summaries/: repository.py  router.py  schemas.py  service.py
